Fixed bad display of Roledetailpage header on mobile.

--- a/styles/Roleconditions.module.css
+++ b/styles/Roleconditions.module.css
@@ -8,7 +8,7 @@
   color: white;
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 800px) {
   .roleConditionsContainer {
     display: flex;
     flex-direction: row;
